// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textLineThrough renders 0 1`] = `
Array [
  .c0 {
  text-line-through: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThrough renders function 1`] = `
Array [
  .c0 {
  text-line-through: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThrough renders invalid theme path 1`] = `
Array [
  .c0 {
  text-line-through: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThrough renders negative number 1`] = `
Array [
  .c0 {
  text-line-through: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThrough renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-line-through: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-line-through: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-line-through: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-line-through: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThrough renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-line-through: July;
  }
}

@media April {
  .c0 {
    text-line-through: August;
  }
}

@media January {
  .c0 {
    text-line-through: September;
  }
}

@media April {
  .c0 {
    text-line-through: November;
  }
}

@media June {
  .c0 {
    text-line-through: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-line-through: July;
  }
}

@media April {
  .c0 {
    text-line-through: August;
  }
}

@media January {
  .c0 {
    text-line-through: September;
  }
}

@media April {
  .c0 {
    text-line-through: November;
  }
}

@media June {
  .c0 {
    text-line-through: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-line-through: January;
  }
}

@media April {
  .c0 {
    text-line-through: December;
  }
}

@media January {
  .c0 {
    text-line-through: April;
  }
}

@media April {
  .c0 {
    text-line-through: May;
  }
}

@media June {
  .c0 {
    text-line-through: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-line-through: January;
  }
}

@media April {
  .c0 {
    text-line-through: December;
  }
}

@media January {
  .c0 {
    text-line-through: April;
  }
}

@media April {
  .c0 {
    text-line-through: May;
  }
}

@media June {
  .c0 {
    text-line-through: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThrough renders postitive number 1`] = `
Array [
  .c0 {
  text-line-through: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThrough renders string 1`] = `
Array [
  .c0 {
  text-line-through: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThrough renders valid theme path 1`] = `
Array [
  .c0 {
  text-line-through: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
